kubernetes/02_applications/demo/ingressroute-demo-lan.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: demo-lan
  namespace: demo
  labels:
    app.kubernetes.io/name: demo
    app.kubernetes.io/instance: demo
    app.kubernetes.io/managed-by: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`demo.wieseschwarm.lan`)
      kind: Rule
      services:
        - name: demo
          port: http
  tls: {}
