kubernetes/02_applications/demo/ingressroute-demo-public.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: demo-public
  namespace: demo
  annotations:
    external-dns.kubernetes.io/target: "0c7f5b3b-6179-4d8a-beff-954e8e87e37c.cfargotunnel.com"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`demo.wieseclan.eu.org`)
      kind: Rule
      services:
        - name: demo
          port: http
  tls:
    secretName: demo-public-tls
